--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1669,107 +1669,107 @@ stories:
   domain: http://www.cnhi.com/register/
   link: https://www.cnhi.com/muskogee-man-charged-with-kidnapping-assault-in-wagoner-county/image_bf65167a-2340-11ea-a015-8bf2076abf35.html
 images:
-- name: fence-fence-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-ww2-dresden.jpg
-- name: oldhotel-oldhotel-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-emily-carr.jpg
-- name: beach-clouds-lifeguard-beachclouds-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-monet-one.jpg
-- name: oldtrain-oldtrain-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-yellow-paper.jpg
-- name: oldroad-old-road-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crabapple.jpg
-- name: ellis-island-ellisisland-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-constitution.jpg
-- name: stories-death-valley-national-park-dali-three-just-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-death-valley-national-park-dali-three-just-road.jpg
-- name: udnie-IMG_E3643.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_E3643.jpg
-- name: status-berlin-status-berlin-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-copper-circuit.jpg
-- name: meadowbutterfly-meadow-butterfly-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alien-goggles.jpg
-- name: docks-docks-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-nazi-poster.jpg
-- name: server-cloud-server-racks-clouds-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-umberto-bocc.jpg
-- name: oldbarn-oldbarn-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-post-modern.jpg
-- name: windowmountain-window-mountain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-aqua.jpg
-- name: bordercrossing-bordercrossing-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crabapple.jpg
-- name: white-house-lawn-white-house-lawn-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-light-dali.jpg
-- name: nyc-flag-nycflag-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-smooth-ride.jpg
-- name: old-granary-field-oldhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-kandinsky-bv.jpg
-- name: machine-road-machine-road-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dark-soul.jpg
-- name: braceros-domingo-ulloa-old-piano-paris-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-piano-paris-hospital.jpg
-- name: bordercrossing-bordercrossing-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-pablo-blue.jpg
-- name: legal-statue-legalstatue-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-sand-paper.jpg
-- name: bf-skinner-nyc-subway-train-125th.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-nyc-subway-train-125th.jpg
-- name: border-fence-border-fence-on-hill-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-emily-carr.jpg
-- name: oldroad-old-road-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-oily-mcoilface.jpg
-- name: old-school-house-old-schoolhouse-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-mucha-mult.jpg
-- name: capital-battle-capitolbattle-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-sand-paper.jpg
-- name: oldhotel-oldhotel-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-soul.jpg
-- name: udnie-IMG_8486.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8486.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-purple-pond.jpg
-- name: liberty-back-statue-liberty-back-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-dali.jpg
-- name: oldcabin-oldcabin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin.jpg
-- name: berlinwall-DSC-0084-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-wols.jpg
-- name: hollywood-building-hollywood-building-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-atari-asteroids.jpg
-- name: dc-statue-dcstatue-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crunch-paper.jpg
-- name: sand-hand-sand-hand-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-nazi-poster.jpg
-- name: oldroad-old-road-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-far-away.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-jap-dys-1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-jap-dys-1.JPG
-- name: supreme-court-supremecourt-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-clean-view.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
-- name: rain-princess-blechlety-old-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-blechlety-old-racks.jpg
-- name: server-cloud-server-racks-door-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sand-paper.jpg
-- name: rockingchair-rockingchair-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-deep-connections.jpg
-- name: mistywoods-babyfoot-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-sunday.jpg
-- name: trucksilo-trucksilo-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-circuit.jpg
-- name: windowmountain-window-mountain-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-kand-two.jpg
-- name: catacombs-catacombs-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-purple-pond.jpg
-- name: oldhouse-oldhouse-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-feed-people.jpg
-- name: oldsmallboat-oldsmallboat-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-monet-one.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-ww2-color.jpg
-- name: catacombs-catacombs-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-colored-circuits.jpg
+- name: la-muse-crypto-wheels-old-compute-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-crypto-wheels-old-compute-bletchley.jpg
+- name: oldroad-old-road-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-collage.jpg
+- name: copper-circuit-whie-house-close-up-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-whie-house-close-up-2.jpg
+- name: stories-catacombs-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-copper-circuit-2.jpg
+- name: stalin-time-san-pedro-light-cities.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-pedro-light-cities.jpg
+- name: window-window-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-smooth-ride.jpg
+- name: store-on-corner-oldcabin-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-creativity.jpg
+- name: lincoln-memorial-lincolnmemorial-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-bright-sand.jpg
+- name: store-on-corner-store-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-rain.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-far-away.jpg
+- name: locked-up-steam-lock-up-steam-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-really-hot.jpg
+- name: nyc-flag-nycflag-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-clean-view.jpg
+- name: aws-s3-square-schoolhouse-dark-dali-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-schoolhouse-dark-dali-square.jpg
+- name: amusement-park-amusement-park-2-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-kandinsky-bv.jpg
+- name: rockingchair-rockingchair-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-three.jpg
+- name: aws-s3-stories-new-68-76-800-500-0-max-0-1--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-76-800-500-0-max-0-1--5.jpg
+- name: bordercrossing-bordercrossing-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-clean-view.jpg
+- name: art-museum-art-museum-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-propaganda-leaflets.jpg
+- name: gears-4882162452-fa3126b38d-b-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-pablo-blue.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-mucha-mult.jpg
+- name: legal-statue-legalstatue-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-bright-sand.jpg
+- name: blossombar-neo-instinct-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-neo-instinct-file-00-00-50-62.jpg
+- name: nazi-invasion-seattle-waterfront-ferris-wheel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-waterfront-ferris-wheel.jpg
+- name: beach-clouds-lifeguard-beachclouds-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-smooth-ride.jpg
+- name: aws-s3-stories-soldier-computer-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-soldier-computer-dark-dali.jpg
+- name: mosaic-face-mosaic-face-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-attack-planes.jpg
+- name: razorcliff-razorcliff-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-sunday.jpg
+- name: gypsy-wagon-gypsywagon-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-pablo-blue.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-ww2-color.jpg
+- name: nazi-invasion-old-time-cash-register.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-time-cash-register.jpg
+- name: amusement-park-amusement-park-2-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-5.jpg
+- name: trucksilo-trucksilo-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dry-skin.jpg
+- name: border-crossing-bordercrossing-gan-vogh.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-gan-vogh.png
+- name: two-sattelite-dishes-leaflets-of-the-russian-revolution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-leaflets-of-the-russian-revolution.jpg
+- name: docks-docks-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-colorful-dream.jpg
+- name: dragon-desert-desert-dragon-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-colored-circuits.jpg
+- name: mistywoods-babyfoot-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-alien-goggles.jpg
+- name: border-crossing-bordercrossing-ww2-dresden.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-ww2-dresden.png
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-ww2-color.jpg
+- name: server-cloud-server-racks-door-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-blocks.jpg
+- name: capital-battle-capitolbattle-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-smoking-cigarette.jpg
+- name: miamibeach-miamibeach-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-aqua.jpg
+- name: oldbarn-oldbarn-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-yellow-collage.jpg
+- name: bluelake-post-modern-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-00-00-00.jpg
+- name: old-granary-field-oldhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-deep-connections.jpg
+- name: stalin-time-stairs-down-blue-green.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-stairs-down-blue-green.jpg
+- name: capital-battle-capitolbattle-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-diego-rivera1.jpg
+- name: miamibeach-miamibeach-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-alien-goggles.jpg
+- name: razorwire-DSC-0080-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-purp-paper.jpg
+- name: old-door-lock-old-door-lock-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-cinnamon-rolls.jpg
+- name: white-house-lawn-white-house-window-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-satan-red.jpg
 ---
 Beast Mode Returns? Lynch, Seahawks On Verge Of Reunion.&nbsp;Tennessee Announces Addition Of Point Guard Santiago Vescovi.&nbsp;How To Choose The Right Payment Processor.&nbsp;Ask Rusty How Can We Change Social Securitys Earnings Limit?.&nbsp;McConnell Not Ruling Out Witnesses In Impeachment Trial.&nbsp;Arts Council Begins Work On Cary Saurage Community Arts Center.&nbsp;Deputies Ring Their Own Bells to Benefit The Salvation Army.&nbsp;Fire Displaces Donora Woman From Home.&nbsp;
